# loop-subdivision

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
source/: main.cpp
source/include/: application.h
source/src/: application.cpp
